--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <meta name="format-detection" content="telephone=no, email=no, address=no">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="author" content="Tashiro Hiroaki">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link rel="icon" href="Assets/favicon.ico">
+        <link rel="stylesheet" href="Assets/index.css">
     </head>
 
     <body>
